[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/main_scene/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/main_scene/shooter.gd" type="Script" id=2]
[ext_resource path="res://assets/main_scene/Mauer.png" type="Texture" id=3]
[ext_resource path="res://scripts/main_scene/wall.gd" type="Script" id=4]
[ext_resource path="res://scenes/main_scene/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main_scene/background.png" type="Texture" id=6]
[ext_resource path="res://scenes/main_scene/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/shop/shop_placeholder.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 1856, 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 959.5, 18.5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 2.66667, 2.25 )
texture = ExtResource( 6 )

[node name="GUI" parent="." instance=ExtResource( 7 )]
margin_right = 723.0
margin_bottom = 94.0

[node name="Healthbarcontainer" parent="GUI/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 183.0

[node name="Healthbar" parent="GUI/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/Healthbarcontainer" index="1"]
value = 100.0

[node name="enemy_spawn_line" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="enemy_spawn_position" type="PathFollow2D" parent="enemy_spawn_line"]
position = Vector2( 64, 0 )

[node name="Mauer" type="Area2D" parent="."]
position = Vector2( 149, 932 )
collision_layer = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mauer"]
position = Vector2( 810.5, 131.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Mauer"]
position = Vector2( 811, 128 )
scale = Vector2( 2.66667, 1.1 )
texture = ExtResource( 3 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Starttimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timekeeper" type="Timer" parent="."]

[node name="enemy_spawn_timer" type="Timer" parent="."]
wait_time = 0.75

[node name="shooter" type="Sprite" parent="."]
position = Vector2( 960, 1032 )
texture = ExtResource( 8 )
script = ExtResource( 2 )

[node name="bullet_spawn_position" type="Position2D" parent="shooter"]
position = Vector2( 960, 1025 )

[node name="bullet_spawn_timer" type="Timer" parent="shooter"]
wait_time = 0.5

[connection signal="area_entered" from="Mauer" to="Mauer" method="_on_Mauer_area_entered"]
[connection signal="game_over" from="Mauer" to="." method="_end_game"]
[connection signal="game_over" from="Mauer" to="GUI" method="_on_Mauer_game_over"]
[connection signal="health_changed" from="Mauer" to="GUI" method="_on_Mauer_health_changed"]
[connection signal="timeout" from="Starttimer" to="." method="_on_Starttimer_timeout"]
[connection signal="timeout" from="Timekeeper" to="." method="_on_Timekeeper_timeout"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="shooter/bullet_spawn_timer" to="shooter" method="_on_bullet_spawn_timer_timeout"]

[editable path="GUI"]
[editable path="GUI/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/Healthbarcontainer"]
[editable path="GUI/VBoxContainer/HBoxContainer/Time_and_Score/Time"]
[editable path="GUI/VBoxContainer/Score"]
